--- a/index.html
+++ b/index.html
@@ -1,102 +1,255 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="en"><head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
-    <link type="text/css" rel="stylesheet" 
-          href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+    <title>My Bitstarter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Le styles -->
+    <!--<link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">-->
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
+
+      @media (min-width: 980px) {
+        body {
+          padding-top: 60px;
+        }
+
+        .linediv-l{
+          border-right: 1px white solid;
+        }
+
+        .linediv-r{
+          border-left: 1px white solid;
+        }
       }
-      .container {
-        width: 960px;
+
+       @media (max-width: 480px) {
+        .copy{
+          padding: 2.5% 10%;
+        }
+        .linediv-l{
+          border-bottom: 1px white solid;
+        }
+
+        .linediv-r{
+          border-top: 1px white solid;
+        }
       }
-      p.lead {
-        padding-top: 15px;
+
+      @media (max-width: 650px){
+        .asset2, .asset {text-align: center; margin-bottom: 8px;}
       }
-      .navigation, .pitch, .section1, .section2, .faq, .footer {
-        padding: 10px 0px 10px 0px;
+
+      body{
+        font-family: 'Open Sans', 'Helvetica', verdana;
       }
-      .video, .thermometer, .order, .social {
-        border: 1px dotted;
+
+      .heading, .subheading {
+        font-family: 'Ubuntu', 'Helvetica', verdana;
         text-align: center;
       }
-      .video {
-        /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-        height: 124px;
-        line-height: 124px;
+
+      p.lead{
+        font-size: 24px;
+        line-height: 30px;
+        padding-top: 1.5%;
       }
-      .thermometer, .order, .social {
-        /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
-        height: 40px;
-        line-height: 40px;
+
+      p {
+        font-size: 18px;
+        line-height: 24px;
       }
-      div.row {
-        border: 1px solid;
+
+      .pitch {
+        padding: 2.5% 0%;
       }
+      .order{
+        padding: 2% 0%;
+      }
+      .actions{
+        padding: 3% 0%;
+        background-color: #343434
+      }
+
+      .video, .thermometer, .social, .order, .statistics {
+        text-align: center;
+      }
+
+      .statistics h3, .statistics p {
+        color: white;
+      }
+
+      .copy {
+        text-align: justify;
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+      }
+
+      .asset{
+        padding: 2.5% 0%;
+      }
+
+      .footer {
+        color: #cccccc;
+        text-align: center;
+      }
+
+      .footer p {
+        font-size: 11px;
+      }
+
+      .footer a {
+        color: #ccccff;
+      }
+
+
     </style>
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+
   </head>
+
   <body>
-    <div class="container">
-      <div class="row navigation">
-        <div class="span2 logo">
-          Logo
-        </div>
-        <div class="span6 blank">
-          Blank
-        </div>
-        <div class="span4 about">
-          About
-        </div>
-      </div>
-      <div class="row heading">
-        <div class="span12">
-          <h1>Bitstarter Title</h1>
-        </div>
-      </div> 
-     <div class="row subheading">
-        <div class="span12">
-          <p class="lead">This is my first bitstarter project.</p>
-        </div>
-      </div>
-      <div class="row pitch">
-        <div class="span6 video">
-          Video
-        </div>
-        <div class="span6">
-          <div class="thermometer">
-            Thermometer
-          </div>
-          <div class="order">
-            Order
-          </div>
-          <div class="social">
-            Social
-          </div>
-        </div>
-      </div>
-      <div class="row section1">
-        <div class="span12">
-          Marketing Section 1
-        </div>
-      </div>
-      <div class="row section2">
-        <div class="span12">
-          Marketing Section 2
-        </div>
-      </div>
-      <div class="row faq">
-        <div class="span12">
-          FAQ
-        </div>
-      </div>
-      <div class="row footer">
-        <div class="span12">
-          Footer
+
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">Bitstarter</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
-  </body>
-</html>
+
+    <div class="container-fluid">
+      
+      <div class="row-fluid heading">
+        <div class="span12">
+          <h1>Product</h1>
+        </div>
+      </div>
+
+      <div class="row-fluid subheading">
+        <div class="span12">
+          <p>Catchy subheading</p>
+        </div>
+      </div>
+
+      <div class="row-fluid pitch">  
+        <div class="span5 offset1 asset2">
+          <img class="video" src="http://placehold.it/480x300">
+        </div>
+
+        <div class="span5 actions">
+          <div class="span8 offset2">
+            <div class="statistics">
+              <div class="span4">
+                <div class="linediv-l"></div>
+                <h3>1000</h3> <p>Brackers</p>
+              </div>
+              <div class="span4">
+                <div class="linediv-l"></div>
+                <h3>$3000</h3> <p>of $10,000</p>
+              </div>
+              <div class="span4">
+                <div class="linediv-r"></div>
+                <h3>10</h3> <p>Days Left</p>
+              </div>
+            </div>
+          </div>
+          <div class="span10 offset1">
+            <div class="thermometer progress active">
+              <div class="bar bar-success" style="width: 60%"></div>
+              <div class="bar bar-warning" style="width: 40%"></div>
+            </div>
+          </div>
+          <div class="span6 offset3 order">
+            <button class="btn btn-success btn-large">Preorder</button>
+          </div>
+          <div class="span8 offset2 social">
+            <button class="btn btn-info"><i class="icon-twitter"></i> Twitter</button>
+            <button class="btn btn-primary"><i class="icon-facebook"></i> acebook</button>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row-fluid section1">
+        <div class="span5 offset1 asset">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
+        </div>
+
+        <div class="span5 copy">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+
+      <div class="row-fluid section2">
+        <div class="span5 offset1 copy copy-right">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+
+        <div class="span5 asset">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
+        </div>
+      </div>
+
+      <div class="row-fluid faq">
+        <div class="span10 offset1">
+          <h3>FAQ</h3>
+
+          <div class="accordion" id="accordion2">
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+                  What does FAQ stand for?
+                </a>
+              </div>
+              <div id="collapseOne" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  Frecuently Asked Question.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+                  What's a FAQ?
+                </a>
+              </div>
+              <div id="collapseTwo" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  Lorem ipsum dolor sit amet
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="row-fluid footer">
+        <div class="span12">
+          <p>License of site 2013</p>
+        </div>
+      </div>
+
+    </div><!--/.fluid-container-->
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+    <script src="http://twitter.github.io/bootstrap/assets/js/bootstrap-transition.js"></script>
+
+</body></html>
