--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en"><head>
     <meta charset="utf-8">
-    <title>My Bitstarter</title>
+    <title>RankMeBetter Crowdfounder</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -107,7 +107,7 @@
 
 
     </style>
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <!-- <link href="css/bootstrap-responsive.css" rel="stylesheet"> -->
 
   </head>
 
@@ -137,13 +137,13 @@
       
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>RankMeBetter</h1>
         </div>
       </div>
 
       <div class="row-fluid subheading">
         <div class="span12">
-          <p>Catchy subheading</p>
+          <p>Get useful advices to improve your mobile SEO</p>
         </div>
       </div>
 
@@ -157,22 +157,22 @@
             <div class="statistics">
               <div class="span4">
                 <div class="linediv-l"></div>
-                <h3>1000</h3> <p>Brackers</p>
+                <h3>1</h3> <p>Brackers</p>
               </div>
               <div class="span4">
                 <div class="linediv-l"></div>
-                <h3>$3000</h3> <p>of $10,000</p>
+                <h3>$100</h3> <p>of $1,000</p>
               </div>
               <div class="span4">
                 <div class="linediv-r"></div>
-                <h3>10</h3> <p>Days Left</p>
+                <h3>30</h3> <p>Days Left</p>
               </div>
             </div>
           </div>
           <div class="span10 offset1">
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%"></div>
-              <div class="bar bar-warning" style="width: 40%"></div>
+              <div class="bar bar-success" style="width: 10%"></div>
+              <div class="bar bar-warning" style="width: 90%"></div>
             </div>
           </div>
           <div class="span6 offset3 order">
@@ -188,21 +188,23 @@
 
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://valorar.com.ve/cdn/seo1.jpg">
         </div>
 
         <div class="span5 copy">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Mobile SEO differs from desktop SEO since it's specifically targeted to the mobile search environment, taking into consideration the specific mobile user's search behaviour and intent, and the characteristics, requirements and restrictions of the mobile web platform from a content, interface and technical perspective.</p>
+              <p> Although the principles of mobile and desktop SEO are the same, the environment characteristics and restrictions are different and in order to make the most out of the mobile search ecosystem it's important to specifically optimize your presence for it.</p>
         </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>In 2009, Google Director of Engineering Scott Huffman revealed that separate mobile algorithms exist to provide a better mobile user experience. This was confirmed in a NY Times feature in late April 2011, in which location was one factor that changed the search results for mobile versus desktop searchers. If you look at smartphone versus desktop rankings for Resolution Media clients in Google Webmaster Tools, generaly you found that there were significative variations in ranking.</p>
+              <p>So you still think that Desktop and Mobile SEO are the same?</p>
         </div>
 
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://valorar.com.ve/cdn/seo2.jpg">
         </div>
       </div>
 
