--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
       <div class="row-fluid footer">
         <div class="span12">
-          <p>License of site 2013</p>
+          <p>Development version 2013</p>
         </div>
       </div>
 
