--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </div>
           </div>
           <div class="span6 offset3 order">
-            <button class="btn btn-success btn-large">Preorder</button>
+            <button class="btn btn-success btn-large">Support</button>
           </div>
           <div class="span8 offset2 social">
             <button class="btn btn-info"><i class="icon-twitter"></i> Twitter</button>
