--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
     <!--[if lt IE 9]>
       <script src="../assets/js/html5shiv.js"></script>
     <![endif]-->
-    <link href="http://valorar.com.ve/cdn/bitstarter.css" rel="stylesheet">
+    <link href="http://valorar.com.ve/cdn/bitstarter.css" rel="stylesheet"> 
+    <!-- <link href="bitstarter.css" rel="stylesheet"> -->
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-43210923-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </head>
 
   <body>
@@ -57,16 +69,57 @@
             <div class="span7">
               <h2>Boost Your Mobile Ranking in Search Engines!</h2>
               <p class="lead">Use our app to analyze and get useful advices about Mobile SEO for your website.</p>
-              <a class="btn btn-large btn-jumbo btn-getstarted" href="#">Get started today</a>
+              <!-- <a class="btn btn-large btn-jumbo btn-getstarted" href="#">Get started today</a> -->
 
             </div>
-            <div class="span5">
+            <div class="span5 actions">
+              <div class="span8 offset2">
+                <div class="statistics">
+                  <div class="span4">
+                    <div class="linediv-l"></div>
+                    <h3>1</h3> <p>Brackers</p>
+                  </div>
+                  <div class="span4">
+                    <div class="linediv-l"></div>
+                    <h3>$100</h3> <p>of $1,000</p>
+                  </div>
+                  <div class="span4">
+                    <div class="linediv-r"></div>
+                    <h3>30</h3> <p>Days Left</p>
+                  </div>
+                </div>
+              </div>
+              <div class="span10 offset1">
+                <div class="thermometer progress active">
+                  <div class="bar bar-success" style="width: 10%"></div>
+                  <div class="bar bar-warning" style="width: 90%"></div>
+                </div>
+              </div>
+              <div class="span6 offset3 order">
+                <button class="btn btn-success btn-large">Preorder</button>
+              </div>
+              <div class="span8 offset2 social">
+                <!-- AddThis Button BEGIN -->
+                <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+                  <a class="addthis_button_preferred_1"></a>
+                  <a class="addthis_button_preferred_2"></a>
+                  <a class="addthis_button_compact"></a>
+                  <a class="addthis_counter addthis_bubble_style"></a>
+                </div>
+                <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+                <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-520d03730aa4ee16"></script>
+                <!-- AddThis Button END -->
+                <!-- <button class="btn btn-info"><i class="icon-twitter"></i> Twitter</button>
+                <button class="btn btn-primary"><i class="icon-facebook"></i> acebook</button> -->
+              </div>
+            </div>
+            <!-- <div class="span5">
               <img class="video" src="http://placehold.it/480x300">
               <div>
                 <a href="http://twitter.com/rankmebetter1" class="btn btn-info" target="_blank"><i class="icon-twitter"></i> Twitter</a>
                 <a href="javascript:void(0);" class="btn btn-primary"><i class="icon-facebook"></i> acebook</a>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
 
@@ -79,7 +132,7 @@
     <div class="container">
 
       <div class="row-fluid">
-        <div class="span12 question"><h3>Why Mobile SEO is different than Desktop?</h3></div>
+        <div class="span12 question"><h3>Why Mobile SEO is different than Desktop SEO?</h3></div>
       </div>
 
       <div class="row-fluid section1">
@@ -88,14 +141,15 @@
         </div>
 
         <div class="span5 copy">
-              <p>Mobile SEO differs from desktop SEO since it's specifically targeted to the mobile search environment, taking into consideration the specific mobile user's search behaviour and intent, and the characteristics, requirements and restrictions of the mobile web platform from a content, interface and technical perspective.</p>
-              <p> Although the principles of mobile and desktop SEO are the same, the environment characteristics and restrictions are different and in order to make the most out of the mobile search ecosystem it's important to specifically optimize your presence for it.</p>
+             <p>In 2009, Google Director of Engineering Scott Huffman revealed that separate mobile algorithms exist to provide a better mobile user experience. This was confirmed in a NY Times feature in late April 2011, in which location was one factor that changed the search results for mobile versus desktop searchers. </p>
+             <p> If you look at smartphone versus desktop rankings for Resolution Media clients in Google Webmaster Tools, generaly you found that there were significative variations in ranking.</p> 
         </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
-              <p>In 2009, Google Director of Engineering Scott Huffman revealed that separate mobile algorithms exist to provide a better mobile user experience. This was confirmed in a NY Times feature in late April 2011, in which location was one factor that changed the search results for mobile versus desktop searchers. If you look at smartphone versus desktop rankings for Resolution Media clients in Google Webmaster Tools, generaly you found that there were significative variations in ranking.</p>
+              <p>Mobile SEO differs from desktop SEO since it's specifically targeted to the mobile search environment, taking into consideration the specific mobile user's search behaviour, requirements and restrictions of the mobile web platform from a content, interface and technical perspective.</p>
+              <p> Although the principles of mobile and desktop SEO are the same, the environment characteristics and restrictions are different and in order to make the most out of the mobile search ecosystem it's important to specifically optimize your presence for it.</p>
               <p>So you still think that Desktop and Mobile SEO are the same?</p>
         </div>
 
@@ -112,19 +166,19 @@
             <div class="accordion-group">
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-                  What does FAQ stand for?
+                  What does service do?
                 </a>
               </div>
               <div id="collapseOne" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  Frecuently Asked Question.
+                  Lorem ipsum dolor sit amet.
                 </div>
               </div>
             </div>
             <div class="accordion-group">
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-                  What's a FAQ?
+                  How it works?
                 </a>
               </div>
               <div id="collapseTwo" class="accordion-body collapse">
@@ -157,5 +211,14 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-43210923-1', 'herokuapp.com');
+      ga('send', 'pageview');
+    </script>
+
   </body>
 </html>
