New Bitcoin button

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   </div>
                   <div class="span4">
                     <div class="linediv-l"></div>
-                    <h3>$100</h3> <p>of $1,000</p>
+                    <h3>$50</h3> <p>of $1,000</p>
                   </div>
                   <div class="span4">
                     <div class="linediv-r"></div>
@@ -96,7 +96,8 @@
                 </div>
               </div>
               <div class="span6 offset3 order">
-                <button class="btn btn-success btn-large">Preorder</button>
+                <!-- <button class="btn btn-success btn-large">Preorder</button> -->
+                <a class="coinbase-button" data-code="53c819bc55ef58889a68e0fd1ff36c09" data-button-style="custom_large" data-button-text="Preorder with Bitcoin" href="https://coinbase.com/checkouts/53c819bc55ef58889a68e0fd1ff36c09">Preorder with Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
               </div>
               <div class="span8 offset2 social">
                 <!-- AddThis Button BEGIN -->
